ajout du paramètre IGNORE_ERRORS

--- a/dreaddon.conf
+++ b/dreaddon.conf
@@ -8,3 +8,6 @@ SCHEMAS=()
 # all -- n'importe quelle version de la base DRE
 # vxx -- la version xx si le répertoire correspondant ou inférieur existe
 COMPAT=vxx
+
+# Faut-il ignorer les erreurs lors de l'exécution des scripts de cet addon?
+IGNORE_ERRORS=
